Minor updates to homepage

--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
       </div>
 
 
-   <div class="container">
+   <div class="container intro">
     <div class="row">
-    <!--   <div class="col-md-10"> -->
-        <h2>Who I Am</h2>
+      <h2>Who I Am</h2>
         <img src="images/1Face.jpg" alt="Personal Photo" class="personal_photo" class="img-responsive">
         <p>I am a forward thinking UX Designer who challenges convention and puts user needs above all else.</p>
 
@@ -58,6 +57,7 @@
 
         <p><a href="https://www.linkedin.com/in/rachel-simon-73214768" target="blank">Contact me</a> anytime to discuss your UX needs!</p>
       </div>
+    </div>
 
     <hr>
       <h2>What I Do</h2>
@@ -84,7 +84,7 @@
             
           <div class="col-sm-6 col-md-4 col-xs-12">
             <div class="card">
-            <img src="images/UserResearch.jpg" alt="User Research">
+              <img src="images/UserResearch.jpg" alt="User Research">
                 <div class="card-block">
                   <h4 class="card-title">User Research</h4>
                   <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -116,10 +116,11 @@
     <hr>
     <div class="row">
         <h2>What I Do Outside of The Office</h2>
-          <div class="row">
-          <div class="hobby-3up">
-            <div class="col-sm-3">
-            <div class="hobby1">
+      </div>
+        <div class="row">
+          <!-- <div class="hobby-3up"> -->
+            <div class="col-sm-3 col-xs-6">
+            <div class="card">
               <img src="images/Painting.jpg" alt="Painting" class="img-responsive">
                 <div class="card-block">
                 <h4 class="card-title">Paint</h4>
@@ -127,8 +128,8 @@
             </div>
             </div>
 
-            <div class="col-sm-3">
-            <div class="hobby2">
+            <div class="col-sm-3 col-xs-6">
+            <div class="card">
               <img src="images/Baking.jpg" alt="Baking" class="img-responsive">
                 <div class="card-block">
                 <h4 class="card-title">Bake</h4>
@@ -136,8 +137,8 @@
             </div>
             </div>
 
-            <div class="col-sm-3">
-            <div class="hobby3">
+            <div class="col-sm-3 col-xs-6">
+            <div class="card">
               <img src="images/Travel.jpg" alt="Travelling" class="img-responsive">
                 <div class="card-block">
                 <h4 class="card-title">Travel</h4>
@@ -145,15 +146,15 @@
             </div>
             </div>
 
-            <div class="col-sm-3">
-            <div class="hobby4">
+            <div class="col-sm-3 col-xs-6">
+            <div class="card">
               <img src="images/Knit.jpg" alt="Knitting" class="img-responsive">
                 <div class="card-block">
                 <h4 class="card-title">Knit*</h4>
               </div>
             </div>
             </div>
-          </div>
+          <!-- </div> -->
         </div>
       </div> 
     </div>
@@ -162,19 +163,18 @@
     </div>
 
     <hr>
+    <div class="container">
     <div class="row">
-    <!--   <div class="col-md-10"> -->
-        <h2>Why Me</h2>
+      <h2>Why Me</h2>
         <p>As an Associate UX Designer with a history in Project Management, I bring to the table the best of both worlds. I am creative yet methodical; an out of the box thinker yet organized; collaborative yet independent. I am driven to produce the best digital experiences for users because so much of our day-to-day revolves around websites, apps and the like.</p>
-      </div>
+      </div> 
     </div>
-    </div>  
 
     <footer>
       <div class=" row">
         <div class="designed col-sm-6 col-md-6 col-xs-12 footer-copy">
           <p>Designed and developed by Rachel Simon</p>
-          </div>
+        </div>
         <div class="icons col-sm-6 col-md-6 col-xs-12 text-center">
           <a href="https://www.linkedin.com/in/rachel-simon-73214768" target="blank">
             <i class="fa fa-linkedin social-icons fa-2x" aria-hidden="true"></a></i> 
@@ -186,7 +186,7 @@
             <i class="fa fa-envelope-o social-icons fa-2x" aria-hidden="true"></i>
           </a>
         </div>
-      
+      </div>
     </footer>
 
     <script src="js/jquery-2.1.4.js"></script>
